--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-gapi": "^1.0.2",
     "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
